fixed order online on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ p {
 }
 
 h1, h2, h3, h4, h5 {
-    font-family: sans-serif;
+    font-family: lisbeth, sans-serif;
     font-weight: 100;
     color:#ffffff;
     margin-bottom: .5em;
@@ -85,6 +85,9 @@ h1 {
 @media screen and (max-width: 992px) {
   .modal-window>div {
     width: 95%;
+  }
+  .modal-window iframe {
+  height: 100vh !important;
   }
 }
 
